[gd_scene load_steps=9 format=3 uid="uid://dqtu7xjqahxq"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_tlgo2"]
[ext_resource type="StyleBox" uid="uid://cqjpxgwhrhqj2" path="res://themes/nested_ui/inner_panel.tres" id="2_1odjq"]
[ext_resource type="Script" path="res://scripts/menus/stats_panel/minions_panel/minions_panel.gd" id="3_e76mr"]
[ext_resource type="Script" path="res://scripts/menus/scroll_better_follow.gd" id="4_e8361"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="4_gjbxj"]
[ext_resource type="Theme" uid="uid://b0ww42iu2x1o8" path="res://themes/attunement_bar_theme.tres" id="6_dpc4s"]
[ext_resource type="PackedScene" uid="uid://cdo34hug5ldv1" path="res://prefabs/ui/virtual_keyboard/virtual_keyboard.tscn" id="6_trqd2"]
[ext_resource type="PackedScene" uid="uid://djat5vf5bcbma" path="res://prefabs/ui/sfx_check_button.tscn" id="7_okjcs"]

[node name="MinionsPanel" type="Panel"]
offset_bottom = 355.0
theme = ExtResource("1_tlgo2")
theme_override_styles/panel = ExtResource("2_1odjq")
script = ExtResource("3_e76mr")

[node name="PlayerView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MinionsTitle" type="RichTextLabel" parent="PlayerView"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 8.0
offset_right = 50.0
offset_bottom = 35.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Minions:[/center]"
fit_content = true

[node name="ReorderButton" parent="PlayerView" instance=ExtResource("4_gjbxj")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 48.0
offset_top = 4.0
offset_right = 151.0
offset_bottom = 38.0
grow_horizontal = 2
text = "Reorder"

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerView" node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("4_e8361")
boxContainer = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerView/ScrollContainer"]
layout_mode = 2

[node name="MinionView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MinionName" type="RichTextLabel" parent="MinionView"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.5
offset_right = 176.5
offset_bottom = 54.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Combatant Nick Here
(Combatant Name Here):[/center]"
fit_content = true

[node name="NameInput" type="LineEdit" parent="MinionView"]
process_priority = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -59.5
offset_right = 128.0
offset_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Combatant Nick Here"
placeholder_text = "Combatant Name Here"
max_length = 20
context_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="NameFormControls" type="HBoxContainer" parent="MinionView"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConfirmButton" parent="MinionView/NameFormControls" instance=ExtResource("4_gjbxj")]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../AutoAllocateCheckButton")
text = "Confirm"

[node name="CancelButton" parent="MinionView/NameFormControls" instance=ExtResource("4_gjbxj")]
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../AutoAllocateCheckButton")
text = "Cancel"

[node name="EditButton" parent="MinionView/NameFormControls" instance=ExtResource("4_gjbxj")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../AutoAllocateCheckButton")
text = "Edit"

[node name="FriendshipLabel" type="RichTextLabel" parent="MinionView"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -128.0
offset_right = 69.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[center]Attunement:[/center]"
fit_content = true

[node name="FriendshipBar" type="ProgressBar" parent="MinionView"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -272.5
offset_top = -98.0
offset_right = 272.5
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_dpc4s")
value = 50.0
rounded = true

[node name="AutoAllocateCheckButton" parent="MinionView" instance=ExtResource("7_okjcs")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.5
offset_top = -51.0
offset_right = 152.5
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../NameFormControls/EditButton")
text = "Auto-Allocate Stat Pts"

[node name="VirtualKeyboard" parent="MinionView" instance=ExtResource("6_trqd2")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PlayerView/ReorderButton" to="." method="_on_reorder_button_pressed"]
[connection signal="visibility_changed" from="PlayerView/ScrollContainer" to="PlayerView/ScrollContainer" method="_on_visibility_changed"]
[connection signal="gui_input" from="MinionView/NameInput" to="." method="_on_name_input_gui_input"]
[connection signal="text_changed" from="MinionView/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="text_submitted" from="MinionView/NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="MinionView/NameFormControls/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="MinionView/NameFormControls/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MinionView/NameFormControls/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="toggled" from="MinionView/AutoAllocateCheckButton" to="." method="_on_auto_allocate_check_button_toggled"]
[connection signal="backspace_pressed" from="MinionView/VirtualKeyboard" to="." method="_on_virtual_keyboard_backspace_pressed"]
[connection signal="enter_pressed" from="MinionView/VirtualKeyboard" to="." method="_on_virtual_keyboard_enter_pressed"]
[connection signal="key_pressed" from="MinionView/VirtualKeyboard" to="." method="_on_virtual_keyboard_key_pressed"]
[connection signal="keyboard_hidden" from="MinionView/VirtualKeyboard" to="." method="_on_virtual_keyboard_keyboard_hidden"]
